# rust-libs-demo

./: .gitignore  Cargo.toml  README.md  build.sh
.cargo/: config
src/: android.rs  ios.rs  lib.rs
